# ccsdspy

./: Cargo.toml  README.md  ccsds.pyi  ccsdspy.pyi
src/: lib.rs
tests/: test.py
