[package]
name = "ccsdspy"
version = "0.1.0-alpha.2"
authors = ["Bruce Flynn <brucef@ssec.wisc.edu>"]
edition = "2021"
description = "CCSDS spacecraft data stream decoding"
keywords = ["ccsds", "spacepacket", "framing", "cadu"]
categories = ["aerospace::space-protocols"]
license-file = "LICENSE.txt"
repository = "https://github.com/bmflynn/ccsdspy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ccsdspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version="0.19.2", features=["extension-module"]}
# ccsds = { path = "../ccsds-rs" }
ccsds = "0.1.0-alpha.4"
chrono = "0.4.33"
